--- a/views/admin/addOffer.ejs
+++ b/views/admin/addOffer.ejs
@@ -199,6 +199,7 @@
                                   <select class="form-select" name="offerType" id="offerType">
                                     <option value="" disabled selected>Select Type</option>
                                     <option value="product">Product</option>
+                                    <!-- <option value="category">category</option> -->
                                   </select>
                                 </div>
                                 
@@ -211,6 +212,7 @@
                                         <% }) %>
                                     </select>
                                 </div>
+                                
   
                                 <div class="row">
                                   <div class="col-lg-6">
