--- a/views/admin/offerManagement.ejs
+++ b/views/admin/offerManagement.ejs
@@ -213,7 +213,7 @@
                     <tr>
                       <td class="text-center"><%= offer.offerType %></td>
                       <td class="text-center">
-                        <%= offer.productId.productName %>
+                        <%= offer.productId?.productName %>
                       </td>
                       <td class="text-center">
                         <%= offer.discountPercentage %>%
