--- a/views/admin/orders-detail.ejs
+++ b/views/admin/orders-detail.ejs
@@ -133,6 +133,12 @@
               <span class="text">Coupon Management </span>
             </a>
           </li>
+          <li class="menu-item">
+            <a class="menu-link" disabled href="/admin/view-offer-management">
+              <i class="icon material-icons md-request_quote"></i>
+              <span class="text">Offer Management</span>
+            </a>
+          </li>
           <!-- <li class="menu-item">
             <a class="menu-link" disabled href="#">
               <i class="icon material-icons md-pie_chart"></i>
@@ -283,9 +289,9 @@
                 >
                   Save
                 </button>
-                <a class="btn btn-secondary print ms-2" href="#"
+                <!-- <a class="btn btn-secondary print ms-2" href="#"
                   ><i class="icon material-icons md-print"></i
-                ></a>
+                ></a> -->
               </div>
             </div>
           </header>
