--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -332,7 +332,7 @@
         <div class="container">
           <div class="breadcrumb">
             <a href="index.html" rel="nofollow">Home</a>
-            <span></span> Shop <span></span> Your Cart
+          <span></span> Your Cart 
           </div>
         </div>
       </div>
