--- a/views/admin/addproduct.ejs
+++ b/views/admin/addproduct.ejs
@@ -133,6 +133,12 @@
               <span class="text">Coupon Management </span>
             </a>
           </li>
+          <li class="menu-item">
+            <a class="menu-link" disabled href="/admin/view-offer-management">
+              <i class="icon material-icons md-request_quote"></i>
+              <span class="text">Offer Management</span>
+            </a>
+          </li>
           <!-- <li class="menu-item">
             <a class="menu-link" disabled href="#">
               <i class="icon material-icons md-pie_chart"></i>
@@ -282,6 +288,8 @@
                           <option value="SAMSUNG">SAMSUNG</option>
                           <option value="HP">HP</option>
                           <option value="DELL">DELL</option>
+                          <option value="HUAWEI">HUAWEI</option>
+                          <option value="REALME">REALME</option>
                         </select>
                         <div
                           id="brandError"
