--- a/views/admin/admincategory.ejs
+++ b/views/admin/admincategory.ejs
@@ -133,6 +133,12 @@
               <span class="text">Coupon Management </span>
             </a>
           </li>
+          <li class="menu-item">
+            <a class="menu-link" disabled href="/admin/view-offer-management">
+              <i class="icon material-icons md-request_quote"></i>
+              <span class="text">Offer Management</span>
+            </a>
+          </li>
           <!-- <li class="menu-item">
             <a class="menu-link" disabled href="#">
               <i class="icon material-icons md-pie_chart"></i>
