--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -133,6 +133,12 @@
               <span class="text">Coupon Management </span>
             </a>
           </li>
+          <li class="menu-item">
+            <a class="menu-link" disabled href="/admin/view-offer-management">
+              <i class="icon material-icons md-request_quote"></i>
+              <span class="text">Offer Management</span>
+            </a>
+          </li>
           <!-- <li class="menu-item">
             <a class="menu-link" disabled href="#">
               <i class="icon material-icons md-pie_chart"></i>
@@ -314,7 +320,7 @@
                     <td class="text-center"><%= index+1%></td>
                     <td class="text-center"><%=order.referenceId%></td>
                     <td class="text-center">
-                      <b><%=order.userId.userName%></b>
+                      <b><%= order.userId.userName %></b>
                     </td>
                     <td class="text-center">₹<%=order.totalAmount%></td>
                     <td class="text-center">
@@ -361,7 +367,7 @@
           <!-- card-body end// -->
         </div>
         <!-- card end// -->
-        <div class="pagination-area mt-15 mb-50">
+        <!-- <div class="pagination-area mt-15 mb-50">
           <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-start">
               <li class="page-item active">
@@ -380,7 +386,7 @@
               </li>
             </ul>
           </nav>
-        </div>
+        </div> -->
       </section>
       <!-- content-main end// -->
       <footer class="main-footer font-xs">
