--- a/views/admin/userManagement.ejs
+++ b/views/admin/userManagement.ejs
@@ -133,6 +133,12 @@
               <span class="text">Coupon Management </span>
             </a>
           </li>
+          <li class="menu-item">
+            <a class="menu-link" disabled href="/admin/view-offer-management">
+              <i class="icon material-icons md-request_quote"></i>
+              <span class="text">Offer Management</span>
+            </a>
+          </li>
           <!-- <li class="menu-item">
             <a class="menu-link" disabled href="#">
               <i class="icon material-icons md-pie_chart"></i>
@@ -320,7 +326,7 @@
           <!-- card-body end// -->
         </div>
         <!-- card end// -->
-        <div class="pagination-area mt-15 mb-50">
+        <!-- <div class="pagination-area mt-15 mb-50">
           <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-start">
               <li class="page-item active">
@@ -339,7 +345,7 @@
               </li>
             </ul>
           </nav>
-        </div>
+        </div> -->
       </section>
       <!-- content-main end// -->
       <footer class="main-footer font-xs">
