--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -424,16 +424,11 @@
                         <span
                           class="font-xl text-brand fw-900 grandTotal"
                           id="GRANDTOTAL"
-                          ><%= grandTotal%></span
                         >
+                          <%= grandTotal%>
+                        </span>
                       </td>
                     </tr>
-                    <%#
-                    <tr>
-                      <th colspan="2">SubTotal</th>
-                      <td colspan="2"></td>
-                    </tr>
-                    %>
                   </tbody>
                 </table>
               </div>
@@ -443,82 +438,6 @@
                   <h5>Payment Method:</h5>
                 </div>
                 <div class="payment_option">
-                  <%#
-                  <div class="custome-radio">
-                    <input
-                      class="form-check-input"
-                      required=""
-                      type="radio"
-                      name="payment_option"
-                      id="exampleRadios3"
-                      checked=""
-                    />
-                    <label
-                      class="form-check-label"
-                      for="exampleRadios3"
-                      data-bs-toggle="collapse"
-                      data-target="bankTranfer"
-                      aria-controls="bankTranfer"
-                      >Direct Bank Transfer</label
-                    >
-                    <div class="form-group collapse in" id="bankTranfer">
-                      <p class="text-muted mt-5">
-                        There are many variations of passages of Lorem Ipsum
-                        available, but the majority have suffered alteration.
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="custome-radio">
-                    <input
-                      class="form-check-input"
-                      required=""
-                      type="radio"
-                      name="payment_option"
-                      id="exampleRadios4"
-                      checked=""
-                    />
-                    <label
-                      class="form-check-label"
-                      for="exampleRadios4"
-                      data-bs-toggle="collapse"
-                      data-target="#checkPayment"
-                      aria-controls="checkPayment"
-                      >Check Payment</label
-                    >
-                    <div class="form-group collapse in" id="checkPayment">
-                      <p class="text-muted mt-5">
-                        Please send your cheque to Store Name, Store Street,
-                        Store Town, Store State / County, Store Postcode.
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="custome-radio">
-                    <input
-                      class="form-check-input"
-                      required=""
-                      type="radio"
-                      name="payment_option"
-                      id="exampleRadios5"
-                      checked=""
-                    />
-                    <label
-                      class="form-check-label"
-                      for="exampleRadios5"
-                      data-bs-toggle="collapse"
-                      data-target="#paypal"
-                      aria-controls="paypal"
-                      >Paypal</label
-                    >
-                    <div class="form-group collapse in" id="paypal">
-                      <p class="text-muted mt-5">
-                        Pay via PayPal; you can pay with your credit card if you
-                        don't have a PayPal account.
-                      </p>
-                    </div>
-                  </div>
-                  %>
                   <div
                     class="bt-1 border-color-1 d-block justify-content-center"
                   >
@@ -540,26 +459,9 @@
                     >
                       Razorpay
                     </button>
-                    <%#
-                    <a
-                      href="/placeorder/wallet"
-                      class="btn btn-fill-out btn-block place-order-wallet"
-                      >Place Order ( Wallet )</a
-                    >
-                    <a
-                      href=""
-                      class="btn btn-fill-out btn-block place-order-online"
-                      id="rzp-button1"
-                      >Online Payement</a
-                    >%>
                   </div>
                 </div>
               </div>
-
-              <%#
-              <a href="#" class="btn btn-fill-out btn-block mt-30"
-                >Place Order</a
-              >%>
             </div>
           </div>
           <div class="row mt-10 mb-10">
