--- a/views/user/partials/footer.ejs
+++ b/views/user/partials/footer.ejs
@@ -98,28 +98,21 @@
             <h5 class="widget-title wow fadeIn animated">About</h5>
             <ul class="footer-list wow fadeIn animated mb-sm-5 mb-md-0">
               <li><a href="#">About Us</a></li>
-              <li><a href="#">Delivery Information</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Terms &amp; Conditions</a></li>
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Support Center</a></li>
             </ul>
           </div>
           <div class="col-lg-2 col-md-3">
             <h5 class="widget-title wow fadeIn animated">My Account</h5>
             <ul class="footer-list wow fadeIn animated">
-              <li><a href="#">Sign In</a></li>
-              <li><a href="#">View Cart</a></li>
-              <li><a href="#">My Wishlist</a></li>
-              <li><a href="#">Track My Order</a></li>
-              <li><a href="#">Help</a></li>
-              <li><a href="#">Order</a></li>
+              <li><a href="/user/signup">Sign In</a></li>
+              <li><a href="/user/load-cart">View Cart</a></li>
+              <li><a href="/user/load-wishlist">My Wishlist</a></li>
+              <li><a href="/user/profile">Order</a></li>
             </ul>
           </div>
           <div class="col-lg-4">
-            <h5 class="widget-title wow fadeIn animated">Install App</h5>
+            <!-- <h5 class="widget-title wow fadeIn animated">Install App</h5> -->
             <div class="row">
-              <div class="col-md-8 col-lg-12">
+              <!-- <div class="col-md-8 col-lg-12">
                 <p class="wow fadeIn animated">
                   From App Store or Google Play
                 </p>
@@ -134,7 +127,7 @@
                     ><img src="/userassets/imgs/theme/google-play.jpg" alt=""
                   /></a>
                 </div>
-              </div>
+              </div> -->
               <div class="col-md-4 col-lg-12 mt-md-3 mt-lg-0">
                 <p class="mb-20 wow fadeIn animated">
                   Secured Payment Gateways
