--- a/views/user/partials/header.ejs
+++ b/views/user/partials/header.ejs
@@ -15,7 +15,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="/userassets/imgs/theme/favicon.svg"
+      href="/userassets/imgs/theme/veeLap.png"
     />
     <!-- Template CSS -->
     <link rel="stylesheet" href="/userassets/css/main.css" />
@@ -90,8 +90,8 @@
         <div class="container">
           <div class="header-wrap">
             <div class="logo logo-width-1">
-              <a href="index.html"
-                ><img src="/userassets/imgs/theme/logo.svg" alt="logo"
+              <a href="/user/"
+                ><img src="/userassets/imgs/theme/veeLap.png" alt="logo"
               /></a>
             </div>
             <div class="header-right">
