--- a/views/user/about.ejs
+++ b/views/user/about.ejs
@@ -1,8 +1,6 @@
 <%-include("./partials/header.ejs")%>
 
 <body>
-  for Interface
-
   <!-- About 4 - Bootstrap Brain Component -->
   <section class="py-3 py-md-5 py-xl-8">
     <div class="container">
@@ -17,7 +15,7 @@
             type="button"
             class="btn btn-lg btn-primary mb-3 mb-md-4 mb-xl-5"
           >
-            Connect Now
+           
           </button>
         </div>
       </div>
@@ -30,7 +28,7 @@
             <div class="row gy-3 gy-md-0 align-items-md-center">
               <div class="col-md-5">
                 <img
-                  src="./assets/img/about-img-2.jpg"
+                  src="/userassets/imgs/theme/about2.jpg"
                   class="img-fluid rounded-start"
                   alt="Why Choose Us?"
                 />
@@ -53,7 +51,7 @@
             <div class="row gy-3 gy-md-0 align-items-md-center">
               <div class="col-md-5">
                 <img
-                  src="./assets/img/about-img-1.jpg"
+                  src="/userassets/imgs/theme/about1.jpg"
                   class="img-fluid rounded-start"
                   alt="Visionary Team"
                 />
