--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -494,10 +494,12 @@
                         </tbody>
                       </table>
                     </div>
+                    <%if(grandTotal){%>
                     <div class="d-flex align-items-center justify-content-center"><a href="/user/checkout?grandTotal=<%=grandTotal%>" class="btn">
                       <i class="fi-rs-box-alt mr-10"></i> Proceed To CheckOut</a
                     ></div>
-                    
+                    <%}%>
+
                   </div>
                 </div>
               </div>
