--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -14,7 +14,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="/userassets/imgs/theme/favicon.svg"
+      href="/userassets/imgs/theme/veeLap.png"
     />
     <!-- Template CSS -->
     <link rel="stylesheet" href="/userassets/css/main.css" />
