--- a/views/admin/editproduct.ejs
+++ b/views/admin/editproduct.ejs
@@ -500,7 +500,7 @@
         } else {
           // Submit the form
           form.submit();
-          console.log("form submitted");
+          // console.log("form submitted");
         }
       });
       function clearErrorMessages() {
