--- a/views/user/forgotPassword.ejs
+++ b/views/user/forgotPassword.ejs
@@ -108,7 +108,7 @@
     const submitBtnEmail = document.getElementById("submitB")
     submitBtnEmail.addEventListener("click",async (event)=>{
       const email = document.getElementById("email").value
-      console.log(email);
+      // console.log(email);
       const emailVm = document.getElementById("emailVm")
       
       if(email.trim() == "" || !emailValidation(email)){
@@ -144,7 +144,7 @@
               OTPSubmitBtn.addEventListener("click", async(event)=>{
                 const enteredOtp = document.getElementById("OTP").value
                 const otpVm = document.getElementById("otpVm")
-                console.log(enteredOtp);
+                // console.log(enteredOtp);
                 await axios({
                   method:"post",
                   url:"/user/verify-forgot-otp",
@@ -254,7 +254,7 @@ function startCountdown() {
 
         if (remainingTime < 0) {
           clearInterval(countdown);
-          console.log("Countdown completed!");
+          // console.log("Countdown completed!");
           submitBtnEmail.innerText = "Resent OTP"
           submitBtnEmail.style.display = "block"
           Timer.style.display = "none"
