--- a/views/user/referalCode.ejs
+++ b/views/user/referalCode.ejs
@@ -76,7 +76,7 @@
         navigator.clipboard
           .writeText(code)
           .then(() => {
-            console.log("Coupon Code copied to Clipboard");
+            // console.log("Coupon Code copied to Clipboard");
             Swal.fire({
               position: "center",
               icon: "success",
