--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -237,12 +237,12 @@
             <h2 class="content-title card-title">Dashboard</h2>
             <p>Whole data about your business here</p>
           </div>
-          <div>
+          <!-- <div>
             <a href="#" class="btn btn-primary"
               ><i class="text-muted material-icons md-post_add"></i>Create
               report</a
             >
-          </div>
+          </div> -->
         </div>
         <div class="row">
           <div class="col-lg-3">
@@ -253,8 +253,8 @@
                 ></span>
                 <div class="text">
                   <h6 class="mb-1 card-title">Revenue</h6>
-                  <span>$13,456.5</span>
-                  <span class="text-sm"> Shipping fees are not included </span>
+                  <span><%=revenue%></span>
+                  <!-- <span class="text-sm"> Shipping fees are not included </span> -->
                 </div>
               </article>
             </div>
@@ -267,8 +267,8 @@
                 ></span>
                 <div class="text">
                   <h6 class="mb-1 card-title">Orders</h6>
-                  <span>53.668</span>
-                  <span class="text-sm"> Excluding orders in transit </span>
+                  <span><%= orders.length %></span>
+                  <!-- <span class="text-sm"> Excluding orders in transit </span> -->
                 </div>
               </article>
             </div>
@@ -281,13 +281,13 @@
                 ></span>
                 <div class="text">
                   <h6 class="mb-1 card-title">Products</h6>
-                  <span>9.856</span>
-                  <span class="text-sm"> In 19 Categories </span>
+                  <span><%=productLength%></span>
+                  <!-- <span class="text-sm"> In 19 Categories </span> -->
                 </div>
               </article>
             </div>
           </div>
-          <div class="col-lg-3">
+          <!-- <div class="col-lg-3">
             <div class="card card-body mb-4">
               <article class="icontext">
                 <span class="icon icon-sm rounded-circle bg-info-light"
@@ -300,9 +300,9 @@
                 </div>
               </article>
             </div>
-          </div>
+          </div> -->
         </div>
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-xl-8 col-lg-12">
             <div class="card mb-4">
               <article class="card-body">
@@ -552,12 +552,12 @@
               </article>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="card mb-4">
           <header class="card-header">
             <h4 class="card-title">Latest orders</h4>
-            <div class="row align-items-center">
-              <div class="col-md-3 col-12 me-auto mb-md-0 mb-3">
+           <!-- <div class="row align-items-center">
+               <div class="col-md-3 col-12 me-auto mb-md-0 mb-3">
                 <div class="custom_select">
                   <select class="form-select select-nice">
                     <option selected>All Categories</option>
@@ -576,7 +576,7 @@
               </div>
               <div class="col-md-2 col-6">
                 <input type="date" value="02.05.2021" class="form-control" />
-              </div>
+              </div> 
               <div class="col-md-2 col-6">
                 <div class="custom_select">
                   <select class="form-select select-nice">
@@ -588,12 +588,14 @@
                   </select>
                 </div>
               </div>
-            </div>
+            </div>-->
           </header>
+          <%if(orders.length > 0){%>
           <div class="card-body">
             <div class="table-responsive">
               <div class="table-responsive">
                 <table class="table align-middle table-nowrap mb-0">
+
                   <thead class="table-light">
                     <tr>
                       <th scope="col" class="text-center">
@@ -610,15 +612,16 @@
                         </div>
                       </th>
                       <th class="align-middle" scope="col">Order ID</th>
-                      <th class="align-middle" scope="col">Billing Name</th>
+                      <th class="align-middle" scope="col">Name</th>
                       <th class="align-middle" scope="col">Date</th>
                       <th class="align-middle" scope="col">Total</th>
                       <th class="align-middle" scope="col">Payment Status</th>
+                      <th class="align-middle" scope="col">Order Status</th>
                       <th class="align-middle" scope="col">Payment Method</th>
-                      <th class="align-middle" scope="col">View Details</th>
                     </tr>
                   </thead>
                   <tbody>
+                    <%orders.forEach((element)=>{%>
                     <tr>
                       <td class="text-center">
                         <div class="form-check">
@@ -633,198 +636,36 @@
                           ></label>
                         </div>
                       </td>
-                      <td><a href="#" class="fw-bold">#SK2540</a></td>
-                      <td>Neal Matthews</td>
-                      <td>07 Oct, 2021</td>
-                      <td>$400</td>
+                      <td><a href="#" class="fw-bold"><%=element.referenceId%></a></td>
+                      <td><%=element.userId.userName%></td>
+                      <td><%=element.orderDate.toLocaleString()%></td>
+                      <td><%=element.totalAmount%></td>
                       <td>
                         <span class="badge badge-pill badge-soft-success"
-                          >Paid</span
+                          ><%=element.paymentStatus%></span
                         >
                       </td>
-                      <td>
-                        <i
-                          class="material-icons md-payment font-xxl text-muted mr-5"
-                        ></i>
-                        Mastercard
-                      </td>
-                      <td>
-                        <a href="#" class="btn btn-xs"> View details</a>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="text-center">
-                        <div class="form-check">
-                          <input
-                            class="form-check-input"
-                            type="checkbox"
-                            id="transactionCheck03"
-                          />
-                          <label
-                            class="form-check-label"
-                            for="transactionCheck03"
-                          ></label>
-                        </div>
-                      </td>
-                      <td><a href="#" class="fw-bold">#SK2541</a></td>
-                      <td>Jamal Burnett</td>
-                      <td>07 Oct, 2021</td>
-                      <td>$380</td>
-                      <td>
-                        <span class="badge badge-pill badge-soft-danger"
-                          >Chargeback</span
-                        >
-                      </td>
-                      <td>
-                        <i
-                          class="material-icons md-payment font-xxl text-muted mr-5"
-                        ></i>
-                        Visa
-                      </td>
-                      <td>
-                        <a href="#" class="btn btn-xs"> View details</a>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="text-center">
-                        <div class="form-check">
-                          <input
-                            class="form-check-input"
-                            type="checkbox"
-                            id="transactionCheck04"
-                          />
-                          <label
-                            class="form-check-label"
-                            for="transactionCheck04"
-                          ></label>
-                        </div>
-                      </td>
-                      <td><a href="#" class="fw-bold">#SK2542</a></td>
-                      <td>Juan Mitchell</td>
-                      <td>06 Oct, 2021</td>
-                      <td>$384</td>
                       <td>
                         <span class="badge badge-pill badge-soft-success"
-                          >Paid</span
-                        >
-                      </td>
+                          ><%=element.orderStatus%></span
+                      </td> 
                       <td>
                         <i
                           class="material-icons md-payment font-xxl text-muted mr-5"
                         ></i>
-                        Paypal
-                      </td>
-                      <td>
-                        <a href="#" class="btn btn-xs"> View details</a>
+                        <%=element.paymentMethod%>
                       </td>
                     </tr>
-                    <tr>
-                      <td class="text-center">
-                        <div class="form-check">
-                          <input
-                            class="form-check-input"
-                            type="checkbox"
-                            id="transactionCheck05"
-                          />
-                          <label
-                            class="form-check-label"
-                            for="transactionCheck05"
-                          ></label>
-                        </div>
-                      </td>
-                      <td><a href="#" class="fw-bold">#SK2543</a></td>
-                      <td>Barry Dick</td>
-                      <td>05 Oct, 2021</td>
-                      <td>$412</td>
-                      <td>
-                        <span class="badge badge-pill badge-soft-success"
-                          >Paid</span
-                        >
-                      </td>
-                      <td>
-                        <i
-                          class="material-icons md-payment font-xxl text-muted mr-5"
-                        ></i>
-                        Mastercard
-                      </td>
-                      <td>
-                        <a href="#" class="btn btn-xs"> View details</a>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="text-center">
-                        <div class="form-check">
-                          <input
-                            class="form-check-input"
-                            type="checkbox"
-                            id="transactionCheck06"
-                          />
-                          <label
-                            class="form-check-label"
-                            for="transactionCheck06"
-                          ></label>
-                        </div>
-                      </td>
-                      <td><a href="#" class="fw-bold">#SK2544</a></td>
-                      <td>Ronald Taylor</td>
-                      <td>04 Oct, 2021</td>
-                      <td>$404</td>
-                      <td>
-                        <span class="badge badge-pill badge-soft-warning"
-                          >Refund</span
-                        >
-                      </td>
-                      <td>
-                        <i
-                          class="material-icons md-payment font-xxl text-muted mr-5"
-                        ></i>
-                        Visa
-                      </td>
-                      <td>
-                        <a href="#" class="btn btn-xs"> View details</a>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="text-center">
-                        <div class="form-check">
-                          <input
-                            class="form-check-input"
-                            type="checkbox"
-                            id="transactionCheck07"
-                          />
-                          <label
-                            class="form-check-label"
-                            for="transactionCheck07"
-                          ></label>
-                        </div>
-                      </td>
-                      <td><a href="#" class="fw-bold">#SK2545</a></td>
-                      <td>Jacob Hunter</td>
-                      <td>04 Oct, 2021</td>
-                      <td>$392</td>
-                      <td>
-                        <span class="badge badge-pill badge-soft-success"
-                          >Paid</span
-                        >
-                      </td>
-                      <td>
-                        <i
-                          class="material-icons md-payment font-xxl text-muted mr-5"
-                        ></i>
-                        Paypal
-                      </td>
-                      <td>
-                        <a href="#" class="btn btn-xs"> View details</a>
-                      </td>
-                    </tr>
+                    <%})%>
                   </tbody>
                 </table>
               </div>
             </div>
             <!-- table-responsive end// -->
           </div>
+          <%}%>
         </div>
-        <div class="pagination-area mt-30 mb-50">
+        <!-- <div class="pagination-area mt-30 mb-50">
           <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-start">
               <li class="page-item active">
@@ -843,7 +684,7 @@
               </li>
             </ul>
           </nav>
-        </div>
+        </div> -->
       </section>
       <!-- content-main end// -->
       <footer class="main-footer font-xs">
