--- a/views/admin/editproduct.ejs
+++ b/views/admin/editproduct.ejs
@@ -15,7 +15,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="/adminassets/imgs/theme/favicon.svg"
+      href="/userassets/imgs/theme/veeLap.png"
     />
     <!-- Template CSS -->
     <link href="/adminassets/css/main.css" rel="stylesheet" type="text/css" />
