--- a/views/admin/editOffer.ejs
+++ b/views/admin/editOffer.ejs
@@ -15,7 +15,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="/adminassets/imgs/theme/favicon.svg"
+      href="/userassets/imgs/theme/veeLap.png"
     />
     <!-- Template CSS -->
     <link href="/adminassets/css/main.css" rel="stylesheet" type="text/css" />
@@ -26,7 +26,7 @@
       <div class="aside-top">
         <a href="/admin/dashboard" class="brand-wrap">
           <img
-            src="/adminassets/imgs/theme/logo.svg"
+            src="/userassets/imgs/theme/veeLap.png"
             class="logo"
             alt="Evara Dashboard"
           />
