--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -598,19 +598,6 @@
 
                   <thead class="table-light">
                     <tr>
-                      <th scope="col" class="text-center">
-                        <div class="form-check align-middle">
-                          <input
-                            class="form-check-input"
-                            type="checkbox"
-                            id="transactionCheck01"
-                          />
-                          <label
-                            class="form-check-label"
-                            for="transactionCheck01"
-                          ></label>
-                        </div>
-                      </th>
                       <th class="align-middle" scope="col">Order ID</th>
                       <th class="align-middle" scope="col">Name</th>
                       <th class="align-middle" scope="col">Date</th>
@@ -621,21 +608,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <%orders.forEach((element)=>{%>
-                    <tr>
-                      <td class="text-center">
-                        <div class="form-check">
-                          <input
-                            class="form-check-input"
-                            type="checkbox"
-                            id="transactionCheck02"
-                          />
-                          <label
-                            class="form-check-label"
-                            for="transactionCheck02"
-                          ></label>
-                        </div>
-                      </td>
+                    <%orders.reverse().forEach((element)=>{%>
                       <td><a href="#" class="fw-bold"><%=element.referenceId%></a></td>
                       <td><%=element.userId.userName%></td>
                       <td><%=element.orderDate.toLocaleString()%></td>
